--- a/best-boys.html
+++ b/best-boys.html
@@ -22,7 +22,7 @@
     <section class="go">
         
             <div class="left">
-                <p>Thanks you for coeme on my page.I am Tanjin Hossain and <br> I need try to creat a website. MY dream is complate wev develiper so I try my best. </p>
+                <p>Thanks you for come on my page. I am Tanjin Hossain and <br> I need try to creat a website. MY dream is complate wev developer so I try my best. </p>
              </div>
          
          <div class="right">
@@ -32,5 +32,20 @@
              </div>  
          </div>
     </section>
+        <h1 id="miss">Let's Try Some New</h1>
+    <section>
+        <div class="biger">
+            <div>
+                <img class="sobi" src="best.jpeg" width="600px" alt=" tanjin">
+            </div>
+            <div class="nox">
+                <P>every single day i try to a web developer <br> and make a website. Sure one day I become a developer</P>
+            </div>
+            <div class="img">
+                <img src="best1.jpg" width="600px" alt="">
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
