--- a/best-boys.html
+++ b/best-boys.html
@@ -46,6 +46,17 @@
             </div>
         </div>
     </section>
-
+<section>
+   <div class="five">
+    <div class="four">
+        <li>What's you think about website?</li>
+        <p>I website are to important in our life . A website give us more information in hole world . There see most interesting and funny ,sad and every need we have than website have it just purchues it. you search any thing but show some website. </p>
+    </div>
+    <div id="six">
+        <li>How to make a website?</li>
+        <p>You make a website then you need to much practice and herd work . and you need some application and more time like 7-8 hours to you need . And try to make a website and get more interesting subject. So evry people don't make a website so you make a website then you learning so hard and harder apeed and patioen you get . Last time i say every single day important for you the make future of the web developer.</p>
+    </div>
+   </div>
+</section>
 </body>
 </html>
