--- a/best-boys.html
+++ b/best-boys.html
@@ -49,14 +49,39 @@
 <section>
    <div class="five">
     <div class="four">
-        <li>What's you think about website?</li>
-        <p>I website are to important in our life . A website give us more information in hole world . There see most interesting and funny ,sad and every need we have than website have it just purchues it. you search any thing but show some website. </p>
+        <li class="color">What's you think about website?</li>
+        <p>I think website are to important in our life . A website give us more information in hole world . There see most interesting and funny ,sad and every need we have than website have it just purchues it. you search any thing but show some website. </p>
     </div>
     <div id="six">
-        <li>How to make a website?</li>
+        <li  class="color">How to make a website?</li>
         <p>You make a website then you need to much practice and herd work . and you need some application and more time like 7-8 hours to you need . And try to make a website and get more interesting subject. So evry people don't make a website so you make a website then you learning so hard and harder apeed and patioen you get . Last time i say every single day important for you the make future of the web developer.</p>
     </div>
    </div>
 </section>
+
+<div class="start">
+   <h3 id="noob">Hello so this is my New page i try my best. I know this site is not good but i try next time batter then this so Thank you . <br>
+    <p>And Chek My Another Site.</p><a id="blod" target="_blank" href="https://tanjinhossain1.github.io/tanjingood/tanjin.html"> <strong>TANJIN HOSSAIN</strong></a> </h2>
+</div>
+
+
+<div class="loot">
+    <img src="best2.jpg" width="700px" alt="">
+</div>
+
+<div class="loot">
+   <h3 class="tiki"> USER NAME:
+    <input type="text"></h3>
+    <h3 class="tik"> Email:
+        <input type="email"> </h3>
+        <h3> Enter Password:
+            <input type="password">
+            <input type="checkbox"> </h3>
+           <h3 id="kana"> <input type="submit"></h3>
+
+</div>
+
+
+
 </body>
 </html>
